app/assets/stylesheets/site.css
/* ... */
.mediumish-line{
  width: 130px;
}
.long-line{
  width: 250px;
}
.long-line-10{
  width: 10%;
}
.long-line-20{
  width: 20%;
}
.long-line-30{
  width: 30%;
}
.long-line-40{
  width: 40%;
}
.long-line-50{
  width: 50%;
}
.long-line-60{
  width: 60%;
}
.long-line-70{
  width: 70%;
}
.long-line-80{
  width: 80%;
}
.long-line-90{
  width: 90%;
}
.thin-line{
  height: 1px;
}
.inline-line{
  display: inline-block;
}
.margin-left-0{
  margin-left: 0%;
}
.margin-left-20{
  margin-left: 20%;
}
.margin-left-40{
  margin-left: 40%;
} 
.margin-left-60{
  margin-left: 60%;
}
.margin-left-80{
  margin-left: 80%;
}
.margin-left-10{
  margin-left: 10%;
}
.margin-left-30{
  margin-left: 30%;
}
.margin-left-50{
  margin-left: 50%;
} 
.margin-left-70{
  margin-left: 70%;
}
.margin-left-90{
  margin-left: 90%;
}  
.left-0{
  left: 0%;
}
.left-20{
  left: 20%;
}
.left-40{
  left: 40%;
} 
.left-60{
  left: 60%;
}
.left-80{
  left: 80%;
}
.left-10{
  left: 10%;
}
.left-15{
  left: 15%;
}
.left-25{
  left: 25%;
}
.left-275{
  left: 27.5%;
}
.left-285{
  left: 28.5%;
}
.left-325{
  left: 32.5%;
}
.left-30{
  left: 30%;
}
.left-35{
  left: 35%;
}
.left-50{
  left: 50%;
} 
.left-45{
  left: 45%;
} 
.left-435{
  left: 43.5%;
} 
.left-70{
  left: 70%;
}
.left-90{
  left: 90%;
}  
.top-20{
  top: 20%;
}
.top-40{
  top: 40%;
} 
.top-60{
  top: 60%;
}
.top-80{
  top: 80%;
}
.top-10{
  top: 10%;
}
.top-25{
  top: 25%;
}
.top-275{
  top: 27.5%;
}
.top-30{
  top: 30%;
}
.top-325{
  top: 32.5%;
}
.top-35{
  top: 35%;
}
.top-375{
  top: 37.5%;
}
.top-50{
  top: 50%;
}  
.top-70{
  top: 70%;
}
.top-90{
  top: 90%;
} 
.margin-top-20{
  margin-top: 20%;
}
.margin-top-40{
  margin-top: 40%;
} 
.margin-top-60{
  margin-top: 60%;
}
.margin-top-80{
  margin-top: 80%;
}
.margin-top-10{
  margin-top: 10%;
}
.margin-top-25{
  margin-top: 25%;
}
.margin-top-30{
  margin-top: 30%;
}
.margin-top-5{
  margin-top: 5%;
} 
.margin-top-15{
  margin-top: 15%;
} 
.margin-top-50{
  margin-top: 50%;
} 
.margin-top-70{
  margin-top: 70%;
}
.margin-top-90{
  margin-top: 90%;
} 

.overlayed{
  -webkit-filter: brightness(0.65); /* Safari 6.0 - 9.0 */
  filter: brightness(0.65);
}
.thick-border{
  border-width: 6px!important;
}
.shadow-container{ 
  filter: drop-shadow(4px 4px 3px rgba(0,0,0,0.60));
}
.yellow-background{
  background: #f5cc5b; /* yellow */
}
.white-background{
  background: white;
}
.black-background{
  background: #242424; /* black */
}
.full-size{
  width: 100%;
  height: 100%;
}
.bordered{
  border:1px solid black;
}
.relative{
  position: relative;
}
.left-sided{
  position: absolute;
  left: 0px
}
.right-sided{
  position: absolute;
  right: 0px
}
.top-sided{
  position: absolute;
  top: 0px
}
.bottom-sided{
  position: absolute;
  bottom: 0px
}
.vertical-middle{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}
.centered-x{
  transform: translateX(-50%);
}
.centered-x-25{
  transform: translateX(-25%);
}
.centered-y{
  transform: translateY(-50%);
}
.centered-xy{
  transform: translate(-50%,-50%);
}

.social-links{
  display: inline-block;
  padding: 0px;
  list-style-type: none;
  text-align: center;
  width: 35px;
  position: relative;
}
.social-links li{
  position: relative;
  margin-bottom: 15px;
}
.social-links li a{ 
  display: inline-block;
  height: 100%;
}


.arrow-next-container{
  border: 1px solid black;
  border-bottom:none;
  width: 40px;
  height: 40px;
  position: absolute;
  z-index: 10000;
  bottom: 10px;
  left:40px;
  text-align: center;
  cursor: pointer;
}

.arrow-next-container:hover{
  background:#ffd04e; /* yellow */
}
.arrow-next-container:before{
  content: '';
  position: absolute;
  bottom: 0px;
  left: -1px;
  z-index: 3;
  width: 2px;
  height: 10px;
  background:white; 
}
.arrow-next-container:after{
  content: '';
  position: absolute;
  bottom: 0px;
  right: -1px;
  z-index: 3;
  width: 2px;
  height: 10px;
  background:white; 
}
.arrow-next-container .arrow-next{
  font-size: 30px;
  display: inline-block;
  position: relative;
  z-index: 0; 
} 


section .container {
  position: relative;
  padding: 0px;
}
section .container > .inner-columns{
  position: relative;
  height: 100vh;
  z-index: 5;
}

/*
********** HEADER **********
*/

header.header-container {
  padding-top: 30px;
  position: fixed;
  z-index: 10000000000000000000000000;
  width: 100%;
}

header .logo-container{
  position: unset;
  padding: 0px;
}

header .logo-container > a{
  margin-left: 50px;
}

header .logo-container #header_logo{
  max-width: 175px;
}

header .logo-container .rois-logo-line{
  position: absolute;
  left: 0px;
  top: 125px;
  width: 26%;
  border-bottom: 1px solid #242424;
}

header .logo-container .rois-logo-dot{
  position: absolute;
  left:  26.5%;
  top: 122.5px;
  width: 5px;
  height: 5px;
  background: #242424; /* black */
  border-radius: 100%;
}

header .menu-container ul#header_menu{
  width: 100%;
}

header .menu-container ul#header_menu a{
  font-size: 17px;
}

header .menu-container ul#header_menu li{
  display: inline-block;
  padding: 5px;
  margin: 0px 15px;
}

header .menu-container .rois-menu-line-thick{
  position: absolute;
  right: 0px;
  top: 40px;
  border-bottom: 6px solid #242424; /* black */
  width: 92.5%;
}


header .menu-container .rois-menu-line-thin{
  position: absolute;
  right: 0px;
  top: 55px;
  border-bottom: 3px solid #242424; /* black */
  width: 75%;
}

header .secundary-rois-container{
  position: relative;
  padding: 0px;
}

header .secundary-rois-container .animate.secundary-rois{
  width: 100px;
  vertical-align: middle;
  display: none;
}

header .secundary-rois-container .animate.secundary-rois.pos-1{
  display: inline-block;
}

header .secundary-rois-container .text-container.secundary-rois{
  display: inline-block;
  position: relative;
  vertical-align: middle;
  width: calc(100% - 100px);
  height: 80px;
}
/* ... */

